# llm-fastapi

./: .env  .env.example  .gitignore  BESTPRACTICES.md  README.md  ecosystem.config.js  pyproject.toml
src/app/: main.py
src/app/core/: config.py  lifespan.py
src/app/database/: db_manager.py  dm_pool.py  mysql_pool.py
src/app/routers/: api.py  reports.py
src/app/routers/abort/: reports.py
src/app/routers/common/: edb.py  yus.py
src/app/routers/llm/: chat.py  contract.py  contract_checker.py  contract_search.py  doc.py  search.py  tech_report.py  translate.py
src/app/scheduler/: __init__.py  scheduler.py  start.py  task_config.py
src/app/scheduler/tasks/: __init__.py  reports.py
src/utils/: logger.py  report_utils.py
src/utils/llm_graph/: contact_checker_graph.py  contract_graph.py  doc.py  doc_audit.py  doc_audit_graph.py  doc_rewrite_graph.py  doc_standard_check_graph.py  tech_report_graph.py  translate_graph.py  traslate_graph.py
